@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20201129
+;; Version:    20210808
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eepitch.el>
@@ -780,16 +780,27 @@ This is useful for for running processes that use pagers like
 ;;;  \___/ \__|_| |_|\___|_|     \__\___|_|  |_| |_| |_|___/
 ;;;                                                         
 ;; «eepitch-vterm»  (to ".eepitch-vterm")
-;; 2020nov29: new code. Experimental.
 
-(defun eepitch-vterm ()
-  "(This function is a prototype that only works in a controlled setting!)"
+(defun find-vtermprocess (&optional name program)
+  "This is like `find-comintprocess', but uses vterm.
+If NAME is given then the buffer name is \"*vterm: NAME*\"; if
+not, then it is just \"*vterm*\". If a buffer with that name
+already exists, then just visit it; if it doesn't exist then run
+vterm, asking it to create a buffer with that name and to run a
+vterm on it. If PROGRAM is given then ask vterm to run PROGRAM
+there instead of the default shell.\n
+This function is a prototype and will probably change."
+  (let ((buffername (if name (format "*vterm: %s*" name) "*vterm*"))
+	(vterm-shell (or program vterm-shell)))
+    (if (get-buffer buffername)
+	(find-ebuffer buffername)
+      (vterm buffername))))
+
+(defun eepitch-vterm (&optional name program)
+  "This is like `eepitch-comint', but using vterm instead of comint."
   (interactive)
-  ;; (eepitch '(vterm))
-  (eepitch '(if (get-buffer "*vterm*")
-		(set-buffer "*vterm*")
-	      (vterm "*vterm*")))
-  (setq eepitch-line 'eepitch-line-vterm))
+  (prog1 (eepitch `(find-vtermprocess ,name ,program))
+    (setq eepitch-line 'eepitch-line-vterm)))
 
 ;; Thanks to Gabriele Bozzola for helping me with this.
 (defun eepitch-line-vterm (line)
@@ -797,6 +808,19 @@ This is useful for for running processes that use pagers like
   (eepitch-eval-at-target-window
     '(progn (vterm-send-string line)	; "type" the line
 	    (vterm-send-return))))      ; then do a RET
+
+;; Tests:
+;; (find-vterm-name-program)
+;; (find-vterm-name-program "shell 2")
+;; (find-vterm-name-program "julia" "julia")
+;; (find-vterm-name-program "julia 2" "julia")
+;; (eepitch-vterm)
+;; (eepitch-vterm "shell 2")
+;; (eepitch-vterm "julia" "julia")
+;; (eepitch-vterm "julia 2" "julia")
+;; (eepitch-vterm "top" "top")
+;; (defun eepitch-julia  () (interactive) (eepitch-vterm "julia"   "julia"))
+;; (defun eepitch-julia2 () (interactive) (eepitch-vterm "julia 2" "julia"))
 
 
 
