@@ -1,3 +1,13 @@
+2021-08-08  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eepitch.el (find-vtermprocess): new function.
+	(eepitch-vterm): use `find-vtermprocess'.
+
+2021-08-07  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-plinks.el (find-wget-elisp): new function.
+	(find-wgeta-elisp): new function.
+
 2021-08-06  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-plinks.el (ee-find-callprocess00-exit-status): new variable.
